# street-view-green-view

./: .env  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  setup.py
.github/: workflows.yml
.github/workflows/: tests.yml
configs/: example.toml
modules/gvi_segmentation/: README.md  do_segmentation.py  example_viewer_st.py  requirements.txt
notebooks/: 0.0-jyq-create-points-demo.ipynb
outputs/: gvi_webmap.html
src/: assign_gvi_to_points.py  assign_images.py  create_points.py  create_webmap.py  download_images.py  get_gvi_score.py  mapillary.py  mapillary_client.py  points_to_h3.py  score_images.py  utils.py
src/data_parsing/: geopandas.py
src/images/: image_source.py  local_images.py  mapillary.py
src/scoring/: green_view.py  scoring_method.py  segmentation.py
src/templates/: maplibre_template.html
tests/: test_assign_gvi_to_points.py  test_assign_images.py  test_create_points.py  test_score_images.py
tests/assets/: test_gdf.shp
